# kcanvas

./: .gitignore  .travis.yml  README.md  license.txt
examples/: 01basicshapes.cpp  02basicfilledshapes.cpp  03textandfonts.cpp  04paths.cpp  05bitmaps.cpp  06gradients.cpp  07strokestyles.cpp  08clippingandmasking.cpp  CMakeLists.txt
examples/common/: bmp.cpp  bmp.h  example.h
examples/common/win/: main.cpp  windows.cmake
include/kcanvas/: canvas.h  canvasplatform.h  canvasresources.h  canvastypes.h
include/kcanvas/cairo/: platform.h
include/kcanvas/mac/: platform.h
include/kcanvas/win/: platform.h
src/: CMakeLists.txt  canvas.cpp  canvasimpl.cpp  canvasimpl.h  canvasimplplatform.h  canvastypes.cpp  gcc.cmake  msvc.cmake  unicodeconverter.cpp  unicodeconverter.h  windows.cmake
src/cairo/: canvasimplcairo.cpp  canvasimplcairo.h  linux.cmake  platform.cpp
src/mac/: canvasimplquartz.cpp  canvasimplquartz.h  platform.cpp
src/win/: canvasimpld2d.cpp  canvasimpld2d.h  canvasimplgdiplus.cpp  canvasimplgdiplus.h  platform.cpp  windows.cmake
